# ficai-signals-server

./: .env.template  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  main.go  openapi.yaml  schema.sql  test-ci.env  test.env.template  test.sh
.github/workflows/: lint.yml  test.yml
examples/: fake_fichub.rs
src/: fichub.rs  httputil.rs  lib.rs  main.rs  signal.rs  usermgmt.rs
