[package]
name = "ficai-signals-server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.3"
base64ct = { version = "1", features = ["std"] }
cookie = "0.16"
envy = "0.4"
eyre = "0.6"
futures = "0.3"
http = "0.2"
hyper = "0.14"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
warp = "0.3"
